// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component.Section renders not loading 1`] = `
<DocumentFragment>
  <fieldset
    class="css-189pxlq"
  >
    <legend
      class="css-uk26kh"
      variant="xl"
    >
      &lt;label&gt;
    </legend>
    <div
      class="css-187wvck"
    >
      one children
    </div>
    <div
      class="css-19tk458"
      data-is-loading="false"
    >
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        class="chakra-progress css-120wkjd"
        data-indeterminate=""
        role="progressbar"
      >
        <svg
          class="css-jf70f3"
          viewBox="0 0 100 100"
        >
          <circle
            class="chakra-progress__track css-ol3i12"
            cx="50"
            cy="50"
            r="42"
            stroke-width="10px"
          />
          <circle
            class="chakra-progress__indicator css-1dsne73"
            cx="50"
            cy="50"
            r="42"
            stroke-width="10px"
          />
        </svg>
      </div>
    </div>
  </fieldset>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`component.Section renders when loading 1`] = `
<DocumentFragment>
  <fieldset
    class="css-189pxlq"
  >
    <legend
      class="css-uk26kh"
      variant="xl"
    >
      &lt;label&gt;
    </legend>
    <div
      class="css-187wvck"
    >
      one children
    </div>
    <div
      class="css-17rq0zv"
      data-is-loading="true"
    >
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        class="chakra-progress css-120wkjd"
        data-indeterminate=""
        role="progressbar"
      >
        <svg
          class="css-jf70f3"
          viewBox="0 0 100 100"
        >
          <circle
            class="chakra-progress__track css-ol3i12"
            cx="50"
            cy="50"
            r="42"
            stroke-width="10px"
          />
          <circle
            class="chakra-progress__indicator css-1dsne73"
            cx="50"
            cy="50"
            r="42"
            stroke-width="10px"
          />
        </svg>
      </div>
    </div>
  </fieldset>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`component.Section renders when loading having disabled loading 1`] = `
<DocumentFragment>
  <fieldset
    class="css-189pxlq"
  >
    <legend
      class="css-uk26kh"
      variant="xl"
    >
      &lt;label&gt;
    </legend>
    <div
      class="css-187wvck"
    >
      one children
    </div>
    <div
      class="css-19tk458"
      data-is-loading="false"
    >
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        class="chakra-progress css-120wkjd"
        data-indeterminate=""
        role="progressbar"
      >
        <svg
          class="css-jf70f3"
          viewBox="0 0 100 100"
        >
          <circle
            class="chakra-progress__track css-ol3i12"
            cx="50"
            cy="50"
            r="42"
            stroke-width="10px"
          />
          <circle
            class="chakra-progress__indicator css-1dsne73"
            cx="50"
            cy="50"
            r="42"
            stroke-width="10px"
          />
        </svg>
      </div>
    </div>
  </fieldset>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`component.Section renders without label 1`] = `
<DocumentFragment>
  <fieldset
    class="css-189pxlq"
  >
    <div
      class="css-187wvck"
    >
      one children
    </div>
    <div
      class="css-19tk458"
      data-is-loading="false"
    >
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        class="chakra-progress css-120wkjd"
        data-indeterminate=""
        role="progressbar"
      >
        <svg
          class="css-jf70f3"
          viewBox="0 0 100 100"
        >
          <circle
            class="chakra-progress__track css-ol3i12"
            cx="50"
            cy="50"
            r="42"
            stroke-width="10px"
          />
          <circle
            class="chakra-progress__indicator css-1dsne73"
            cx="50"
            cy="50"
            r="42"
            stroke-width="10px"
          />
        </svg>
      </div>
    </div>
  </fieldset>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;
